--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "jewellry-fe",
+  "name": "swd392-fe",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,21 +10,25 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "antd": "^5.17.3",
+    "@ant-design/icons": "^5.3.7",
+    "firebase": "^10.12.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.1",
-    "sass": "^1.77.2",
-    "swiper": "^11.1.3"
+    "sass": "^1.77.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "^10.4.19",
     "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.3",
     "vite": "^5.2.0"
   }
 }
