--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
   "dependencies": {
     "@ant-design/icons": "^5.3.7",
     "@reduxjs/toolkit": "^2.2.5",
+    "@testing-library/react": "^16.0.0",
     "axios": "^1.7.2",
     "firebase": "^10.12.2",
+    "html5-qrcode": "^2.3.8",
     "react": "^18.2.0",
+    "react-barcode": "^1.5.3",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
