--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.7.2",
     "firebase": "^10.12.2",
     "react": "^18.2.0",
+    "react-barcode-reader": "^0.0.2",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.1",
