--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
     "antd": "^5.18.0",
     "axios": "^1.7.2",
     "firebase": "^10.12.2",
-    "prop-types": "^15.8.1",
+    "formik": "^2.4.6",
     "html5-qrcode": "^2.3.8",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-barcode": "^1.5.3",
     "react-dom": "^18.2.0",
@@ -26,7 +27,8 @@
     "react-router-dom": "^6.23.1",
     "redux-persist": "^6.0.0",
     "sass": "^1.77.2",
-    "swiper": "^11.1.4"
+    "swiper": "^11.1.4",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
