--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@yudiel/react-qr-scanner": "^2.0.4",
     "antd": "^5.18.0",
     "axios": "^1.7.2",
+    "chart.js": "^4.4.3",
     "firebase": "^10.12.2",
     "formik": "^2.4.6",
     "html5-qrcode": "^2.3.8",
