--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.19",
     "@mui/material": "^5.15.19",
+    "@mui/x-charts": "^7.9.0",
     "@reduxjs/toolkit": "^2.2.5",
     "@testing-library/react": "^16.0.0",
     "@yudiel/react-qr-scanner": "^2.0.4",
