--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "@ant-design/icons": "^5.3.7",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@fortawesome/fontawesome-svg-core": "^6.5.2",
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@mui/icons-material": "^5.15.19",
     "@mui/material": "^5.15.19",
     "@mui/x-charts": "^7.9.0",
@@ -24,6 +27,7 @@
     "chart.js": "^4.4.3",
     "firebase": "^10.12.2",
     "formik": "^2.4.6",
+    "fortawesome": "^0.0.1-security",
     "html5-qrcode": "^2.3.8",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
