--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "antd": "^5.18.0",
     "axios": "^1.7.2",
     "chart.js": "^4.4.3",
+    "date-fns": "^3.6.0",
     "firebase": "^10.12.2",
     "formik": "^2.4.6",
     "fortawesome": "^0.0.1-security",
